<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/fragment_main">

    <fragment
        android:id="@+id/fragment_main"
        android:name="com.texasgamer.zephyr.fragment.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_fragment_main_to_fragment_menu"
            app:destination="@id/fragment_menu" />
        <action
            android:id="@+id/action_fragment_main_to_fragment_connect"
            app:destination="@id/fragment_connect" />
        <action
            android:id="@+id/action_fragment_main_to_fragment_notifications"
            app:destination="@id/fragment_notifications" />
        <action
            android:id="@+id/action_fragment_main_to_fragment_whats_new"
            app:destination="@id/fragment_whats_new" />
    </fragment>

    <fragment
        android:id="@+id/fragment_notifications"
        android:name="com.texasgamer.zephyr.fragment.NotificationsFragment"
        android:label="@string/menu_manage_notifications"
        tools:layout="@layout/fragment_notifications">
    </fragment>

    <fragment
        android:id="@+id/fragment_about"
        android:name="com.texasgamer.zephyr.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_fragment_about_to_fragment_licenses"
            app:destination="@id/fragment_licenses" />
    </fragment>

    <fragment
        android:id="@+id/fragment_licenses"
        android:name="com.texasgamer.zephyr.fragment.LicensesFragment"
        android:label="@string/about_licenses"
        tools:layout="@layout/fragment_licenses"/>

    <dialog
        android:id="@+id/fragment_menu"
        android:name="com.texasgamer.zephyr.fragment.MenuFragment"
        android:label="Menu"
        tools:layout="@layout/fragment_menu" >
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />

        <action
            android:id="@+id/action_fragment_menu_to_fragment_notifications"
            app:destination="@id/fragment_notifications"
            app:popUpTo="@id/fragment_main" />
        <action
            android:id="@+id/action_fragment_menu_to_fragment_about"
            app:destination="@id/fragment_about"
            app:popUpTo="@id/fragment_main"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_fragment_menu_to_fragment_privacy"
            app:destination="@id/fragment_privacy"
            app:popUpTo="@id/fragment_main" />
        <action
            android:id="@+id/action_fragment_menu_to_fragment_debug"
            app:destination="@id/fragment_debug"
            app:popUpTo="@id/fragment_main" />
    </dialog>

    <dialog
        android:id="@+id/fragment_privacy"
        android:name="com.texasgamer.zephyr.fragment.PrivacyFragment"
        android:label="@string/menu_privacy_title"
        tools:layout="@layout/fragment_privacy">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

    <dialog
        android:id="@+id/fragment_join_code"
        android:name="com.texasgamer.zephyr.fragment.JoinCodeFragment"
        android:label="@string/menu_join_code_title"
        tools:layout="@layout/fragment_join_code">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

    <dialog
        android:id="@+id/fragment_scan_code"
        android:name="com.texasgamer.zephyr.fragment.ScanCodeFragment"
        android:label="@string/menu_scan_qr_title"
        tools:layout="@layout/fragment_scan_code">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

    <dialog
        android:id="@+id/fragment_debug"
        android:name="com.texasgamer.zephyr.fragment.DebugFragment"
        android:label="@string/menu_debug_title"
        tools:layout="@layout/fragment_debug">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

    <dialog
        android:id="@+id/fragment_connect"
        android:name="com.texasgamer.zephyr.fragment.ConnectFragment"
        android:label="@string/menu_connect_title"
        tools:layout="@layout/fragment_connect">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />

        <action
            android:id="@+id/action_fragment_connect_to_fragment_join_code"
            app:destination="@id/fragment_join_code"
            app:popUpTo="@id/fragment_main" />
        <action
            android:id="@+id/action_fragment_connect_to_fragment_scan_code"
            app:destination="@id/fragment_scan_code"
            app:popUpTo="@id/fragment_main" />
    </dialog>

    <dialog
        android:id="@+id/fragment_whats_new"
        android:name="com.texasgamer.zephyr.fragment.WhatsNewFragment"
        android:label="@string/menu_whats_new_title"
        tools:layout="@layout/fragment_whats_new">
        <argument
            android:name="showBackOnNavigate"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

</navigation>